[gd_scene load_steps=3 format=3 uid="uid://qi03cirumaps"]

[ext_resource type="Script" path="res://scripts/water.gd" id="1_sjrw2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lkq47"]
size = Vector2(8, 8)

[node name="Water" type="Area2D"]
collision_layer = 2
collision_mask = 2
linear_damp_space_override = 3
linear_damp = 0.0
script = ExtResource("1_sjrw2")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_lkq47")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
